# HLAEngine

./: CMakeLists.txt  README.md
cmake/: third_party.cmake
inc/: Transform.hpp  utils.hpp
inc/Camera/: Camera.hpp  FPSCamera.hpp  FlyCamera.hpp
inc/Mesh/: Box.hpp  Mesh.hpp  Plane.hpp
inc/Rendering/: EBO.hpp  MeshRenderer.hpp  Shader.hpp  Texture.hpp  VAO.hpp  VBO.hpp
resources/shaders/: blank.frag  blank.vert  default.frag  default.vert  gouraud.frag  gouraud.vert  light_cube.frag  lighting.frag  lighting.vert  triforce.frag  triforce.vert
src/: Transform.cpp  main.cpp  utils.cpp
src/Camera/: Camera.cpp  FPSCamera.cpp  FlyCamera.cpp
src/Mesh/: Box.cpp  Mesh.cpp  Plane.cpp
src/Rendering/: EBO.cpp  MeshRenderer.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
